[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/weapon_models/GrenadeMesh.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/pekko.png" type="Texture" id=2]
[ext_resource path="res://scripts/ExplosionTimer.gd" type="Script" id=3]
[ext_resource path="res://addons/mrminimal_flipbook_particles/assets/explosions/explosion_06/explosion_06.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/587195__derplayer__explosion-07.ogg" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=4]
friction = 5.0
rough = true

[sub_resource type="SphereShape" id=1]
radius = 0.1

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=6]
min_value = -2.0
max_value = 30.0
_data = [ Vector2( 0, 16.0364 ), 0.0, -201.745, 0, 1, Vector2( 0.0753425, 0.836365 ), 0.0, 0.0, 0, 0, Vector2( 1, -2 ), -3.06748, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.769318 ), -1.95682, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 0.01
gravity = Vector3( 0, 0, 0 )
radial_accel_curve = SubResource( 7 )
angle = 360.0
angle_random = 1.0
scale = 0.3
scale_curve = SubResource( 9 )
color_ramp = SubResource( 13 )

[sub_resource type="QuadMesh" id=11]

[sub_resource type="SphereShape" id=14]
radius = 7.0

[node name="Grenade" type="RigidBody"]
mode = 2
physics_material_override = SubResource( 4 )
gravity_scale = 0.1
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true

[node name="Explosion_06" parent="." instance=ExtResource( 4 )]
transform = Transform( 3.06221, 0, 0, 0, 3.06221, 0, 0, 0, 3.06221, 0, 0.906915, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
script = ExtResource( 3 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
material_override = SubResource( 5 )
emitting = false
amount = 24
lifetime = 1.73
one_shot = true
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -2, -2, -2, 4, 4, 4 )
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 11 )

[node name="ExplosionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ExplosionArea"]
shape = SubResource( 14 )

[node name="GrenadeMesh" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 7.0

[connection signal="timeout" from="ExplosionTimer" to="ExplosionTimer" method="_on_ExplosionTimer_timeout"]
